syntax = "proto3";

package arthas.grpc.unittest;

service ArthasUnittestService {
  rpc trace(ArthasUnittestRequest) returns (ArthasUnittestResponse);
  rpc watch(stream ArthasUnittestRequest) returns (stream ArthasUnittestResponse);
}

message ArthasUnittestRequest {
  string message = 1;
}

message ArthasUnittestResponse{
  string message = 1;
}
